--- a/RedisCovid/Properties/Resources.resx
+++ b/RedisCovid/Properties/Resources.resx
@@ -118,10 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Extremadura" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Extremadura.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Close_Button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Close_Button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="España" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\España.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Extremadura" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Extremadura.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Minimize_Button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Minimize_Button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Covid_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Covid_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Covid_icon2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Covid_icon2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
